--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
     "dev": "bun --watch src/index.ts",
     "build": "bun build src/index.ts",
     "start": "NODE_ENV=production bun src/index.ts",
-    "test": "bun test"
+    "test": "bun test",
+    "seed": "bun ./seed.ts"
   },
   "dependencies": {
     "@clerk/clerk-js": "^4.70.5",
     "@elysiajs/html": "^0.8.0",
     "@elysiajs/static": "^0.8.1",
     "@gtramontina.com/elysia-tailwind": "2.0.0",
+    "@ngneat/falso": "^7.2.0",
+    "@prisma/client": "^5.11.0",
     "bundown": "^0.1.2",
     "elysia": "^0.8.17",
     "elysia-clerk": "^0.3.1",
     "markdown-to-jsx": "^7.4.3",
-    "marked": "^12.0.1"
+    "marked": "^12.0.1",
+    "prisma": "^5.11.0"
   },
   "devDependencies": {
     "@types/bun": "^1.0.8",
